--- a/main.bib
+++ b/main.bib
@@ -177,3 +177,18 @@
   number  = {2},
   volume  = {435}
 }
+
+
+@article{Hu14,
+  year    = {2014},
+  month   = {3},
+  title   = {{The Role of Kemeny's Constant in Properties of Markov Chains}},
+  author  = {Hunter, Jeffrey J.},
+  journal = {Communications in Statistics - Theory and Methods},
+  issn    = {0361-0926},
+  doi     = {10.1080/03610926.2012.741742},
+  eprint  = {1208.4716},
+  pages   = {1309--1321},
+  number  = {7},
+  volume  = {43}
+}
