checkpoint before related work

--- a/headers.tex
+++ b/headers.tex
@@ -39,6 +39,7 @@
 \newcommand{\manc}[1]{H\left(#1\right)}
 \newcommand{\tmanc}[1]{\tilde{H}\left(#1\right)}
 \newcommand{\mypar}[1]{\left( #1 \right)}
+\newcommand{\indfunc}[1]{\chi_{#1}}
 
 \newcommand{\bsym}[1]{\boldsymbol{#1}}
 \newcommand{\myord}[1]{{#1}^{\rm{th}}}
