--- a/main.bib
+++ b/main.bib
@@ -192,3 +192,105 @@
   number  = {7},
   volume  = {43}
 }
+
+@article{Cv80,
+  title  = {Spectra of graphs. Theory and application},
+  author = {Cvetkovic, Dragos M and others},
+  year   = {1980}
+}
+
+
+@article{MaMaGi15,
+  year     = {2015},
+  keywords = {Absorbing Random Walk},
+  title    = {{Absorbing Random-Walk Centrality: Theory and Algorithms}},
+  author   = {Mavroforakis, Charalampos and Mathioudakis, Michael and Gionis, Aristides},
+  journal  = {2015 IEEE International Conference on Data Mining},
+  doi      = {10.1109/icdm.2015.103},
+  pages    = {901--906}
+}
+@article{RaZh13,
+  year     = {2013},
+  title    = {{Geometry of complex networks and topological centrality}},
+  author   = {Ranjan, Gyan and Zhang, Zhi-Li},
+  journal  = {Physica A: Statistical Mechanics and its Applications},
+  issn     = {0378-4371},
+  doi      = {10.1016/j.physa.2013.04.013},
+  pages    = {3833--3845},
+  number   = {17},
+  volume   = {392},
+  keywords = {}
+}
+@article{RoGl16,
+  year     = {2016},
+  title    = {{Optimal Tagging with Markov Chain Optimization}},
+  author   = {Rosenfeld, Nir and Globerson, Amir},
+  journal  = {arXiv},
+  doi      = {10.48550/arxiv.1605.04719},
+  eprint   = {1605.04719},
+  keywords = {}
+}
+@article{GaLePaGoLiZh15,
+  year     = {2015},
+  title    = {{Pivotality of Nodes in Reachability Problems Using Avoidance and Transit Hitting Time Metrics}},
+  author   = {Gangemi, Aldo and Leonardi, Stefano and Panconesi, Alessandro and Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
+  journal  = {Proceedings of the 24th International Conference on World Wide Web},
+  doi      = {10.1145/2740908.2744713},
+  pages    = {1073--1078},
+  keywords = {}
+}
+@article{LiYuHuCh14,
+  year     = {2014},
+  title    = {{Random-walk Domination in Large Graphs}},
+  author   = {Li, Rong-Hua and Yu, Jeffrey Xu and Huang, Xin and Cheng, Hong},
+  journal  = {2014 IEEE 30th International Conference on Data Engineering},
+  doi      = {10.1109/icde.2014.6816696},
+  pages    = {736--747},
+  keywords = {}
+}
+@article{MoBaZhPe20,
+  year     = {2020},
+  keywords = {Dynamic Programming},
+  title    = {{Towards an efficient weighted random walk domination}},
+  author   = {Mo, Songsong and Bao, Zhifeng and Zhang, Ping and Peng, Zhiyong},
+  journal  = {Proceedings of the VLDB Endowment},
+  issn     = {2150-8097},
+  doi      = {10.14778/3436905.3436915},
+  pages    = {560--572},
+  number   = {4},
+  volume   = {14}
+}
+
+
+@article{FaWaBoCaMa22,
+  year     = {2022},
+  title    = {{Rewiring What-to-Watch-Next Recommendations to Reduce Radicalization Pathways}},
+  author   = {Fabbri, Francesco and Wang, Yanhao and Bonchi, Francesco and Castillo, Carlos and Mathioudakis, Michael},
+  journal  = {Proceedings of the ACM Web Conference 2022},
+  doi      = {10.1145/3485447.3512143},
+  pages    = {2719--2728},
+  keywords = {}
+}
+
+
+@article{GiBaRa21,
+  year     = {2021},
+  title    = {{A Group-to-Group Version of Random Walk Betweenness Centrality}},
+  author   = {Gillani, Iqra Altaf and Bagchi, Amitabha and Ranu, Sayan},
+  journal  = {8th ACM IKDD CODS and 26th COMAD},
+  doi      = {10.1145/3430984.3431020},
+  pages    = {127--135},
+  keywords = {}
+}
+@article{WaRaSk19,
+  year     = {2019},
+  title    = {{Random Walk Decay Centrality}},
+  author   = {Wąs, Tomasz and Rahwan, Talal and Skibski, Oskar},
+  journal  = {Proceedings of the AAAI Conference on Artificial Intelligence},
+  issn     = {2159-5399},
+  doi      = {10.1609/aaai.v33i01.33012197},
+  pages    = {2197--2204},
+  number   = {01},
+  volume   = {33},
+  keywords = {}
+}
