--- a/headers.tex
+++ b/headers.tex
@@ -56,6 +56,7 @@
 \newcommand{\vecx}{\bsym{x}}
 
 \newcommand{\pscr}{\mathscr{P}}
+\newcommand{\cscr}{\mathscr{C}}
 \newcommand{\kem}{K}
 \newcommand{\dsum}{d_{\sum}}
 \newcommand{\mydeg}{d}
