finish related work

--- a/main.bib
+++ b/main.bib
@@ -230,14 +230,15 @@
   eprint   = {1605.04719},
   keywords = {}
 }
-@article{GaLePaGoLiZh15,
-  year     = {2015},
-  title    = {{Pivotality of Nodes in Reachability Problems Using Avoidance and Transit Hitting Time Metrics}},
-  author   = {Gangemi, Aldo and Leonardi, Stefano and Panconesi, Alessandro and Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
-  journal  = {Proceedings of the 24th International Conference on World Wide Web},
-  doi      = {10.1145/2740908.2744713},
-  pages    = {1073--1078},
-  keywords = {}
+@inproceedings{GaLePaGoLiZh15,
+  year      = {2015},
+  title     = {{Pivotality of Nodes in Reachability Problems Using Avoidance and Transit Hitting Time Metrics}},
+  author    = {Gangemi, Aldo and Leonardi, Stefano and Panconesi, Alessandro and Golnari, Golshan and Li, Yanhua and Zhang, Zhi-Li},
+  journal   = {Proceedings of the 24th International Conference on World Wide Web},
+  doi       = {10.1145/2740908.2744713},
+  pages     = {1073--1078},
+  booktitle = {Proceedings of the 24th International Conference on World Wide Web Companion, {WWW} 2015, Florence, Italy, May 18-22, 2015 - Companion Volume},
+  keywords  = {}
 }
 @article{LiYuHuCh14,
   year     = {2014},
@@ -293,4 +294,21 @@
   number   = {01},
   volume   = {33},
   keywords = {}
+}
+
+@article{ZhLuWaGu17,
+  author     = {Junzhou Zhao and
+                John C. S. Lui and
+                Pinghui Wang and
+                Xiaohong Guan},
+  title      = {Towards Efficient Node Discoverability Optimization on Large Networks},
+  journal    = {CoRR},
+  volume     = {abs/1703.04307},
+  year       = {2017},
+  url        = {http://arxiv.org/abs/1703.04307},
+  eprinttype = {arXiv},
+  eprint     = {1703.04307},
+  timestamp  = {Mon, 13 Aug 2018 16:46:09 +0200},
+  biburl     = {https://dblp.org/rec/journals/corr/ZhaoLWG17.bib},
+  bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
